@@ -21,6 +21,11 @@ yacybar_xmlhttp=Kann keine XMLHTTP Instanz erstellen.
 
 yacybar_unknown=Unbekannt
 
+# notification
+
+yacybar_message_title=YaCy-Nachricht
+yacybar_message_from=von
+
 # yacybaroverlays
 
 # Diese Übersetzungen müssen die gleichen sein wie in der dtd Datei für prefs.tabpanel.menuitem.label.text etc.
