@@ -21,6 +21,11 @@ yacybar_xmlhttp=Cannot create a XMLHTTP instance.
 
 yacybar_unknown=Unknown
 
+# notification
+
+yacybar_message_title=YaCy-Message
+yacybar_message_from=from
+
 # yacybaroverlays
 
 # these ones must be the same as in the dtd file for prefs.tabpanel.menuitem.label.text etc.
@@ -38,3 +43,4 @@ yacybar_indexingon=Indexing is ON
 yacybar_indexingoff=Indexing is OFF
 yacybar_problem_xml=ERROR: There was a problem retrieving the XML data:\n
 yacybar_request_error=request error
+
